# ankimcp

./: .mcp.json  .pre-commit-config.yaml  ACCEPTANCE.md  CLAUDE.md  CLAUDE_SETUP.md  INSTALL.md  LICENSE  PERMISSIONS.md  README.md  claude_config.json  install_addon.sh  package_for_ankiweb.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci-checks.yml  ci.yml  dependabot.yml  pre-commit.yml  release.yml  test-matrix.yml
scripts/: vendor_dependencies.py
src/ankimcp/: __init__.py  __main__.py  addon_config.json  anki_interface.py  bridge.py  client.py  config.json  config.md  http_server.py  manifest.json  meta.json  permissions.py  server.py  simple_http_server.py  tools.py
tests/: __init__.py  test_anki_interface.py  test_anki_interface_permissions.py  test_bridge.py  test_permissions.py  test_server.py  test_server_permissions.py  test_utils.py
